# btt

./: .gitignore  CMakeLists.txt  COPYING
data/: config.xml  names-female.tri  names-male.tri
doc/: objects
libs/: CMakeLists.txt
libs/glm/: CMakeLists.txt
libs/pugixml/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/core/: data_file.hpp  strstream.hpp  typename.hpp  unused.hpp
src/object/: filter.hpp  object.cpp  object.hpp  property.hpp  ref.hpp  store.cpp  store.hpp  structure.hpp
src/world/: geography.cpp  geography.hpp  name_generator.cpp  name_generator.hpp
support/: .gitignore  get_names.sh  trigraph_extractor.py
